@@ -78,10 +78,10 @@
 
 // Mechanic Mado Side Arm Weapons
 2139,Flame_Thrower,Flame Thrower,5,20000,,2000,,5,,0,0x00000400,24,2,32,,99,0,5,{},{},{}
-//2140,Energy_Rune_Guard,Energy Rune Guard,3,10,,10,,,,,,,,,,,,,{},{},{}
+2140,Energy_Rune_Guard,Energy Rune Guard,5,10,,10,,1,,1,0xFFFFFFFF,31,2,32,,70,1,5,{ bonus bMaxSPrate,2; },{},{}
 
-//2794,Magic_Stone_Ring,Magic Stone Ring,3,10,,10,,,,,,,,,,,,,{},{},{}
-//2795,Immature_Apple_Ring,Immature Apple Ring,3,10,,10,,,,,,,,,,,,,{},{},{}
+//2794,Magic_Stone_Ring,Magic Stone Ring,5,10,,10,,0,,0,0xFFFFFFFF,31,2,136,,0,0,0{ bonus bStr,2; },{},{}
+//2795,Immature_Apple_Ring,Immature Apple Ring,5,10,,10,,0,,0,0xFFFFFFFE,31,2,136,,0,0,0,{},{},{}
 //2796,Rocks,Rocks,3,10,,10,,,,,,,,,,,,,{},{},{}
 //2797,Rocks,Rocks,3,10,,10,,,,,,,,,,,,,{},{},{}
 //2798,Test_Item_1,Test Item 1,3,10,,10,,,,,,,,,,,,,{},{},{}
@@ -99,8 +99,8 @@
 2809,Advanced_Cooling_System,Advanced Cooling System,5,10,,10,,0,,1,0x00000400,24,2,136,,99,0,0,{ bonus bDex,1; },{},{}
 2810,Special_Cooling_System,Special Cooling System,5,10,,10,,0,,1,0x00000400,24,2,136,,99,0,0,{ bonus bDex,1; },{},{}
 
-5516,Hawkeye_1,Hawkeye 1,3,10,,10,,,,,,,,,,,,,{},{},{}
-5517,Hawkeye_2,Hawkeye 2,3,10,,10,,,,,,,,,,,,,{},{},{}
+//5516,Hawkeye_1,Hawkeye,5,10,,1000,,0,,0,0x00080808,31,2,256,,0,1,0,{},{},{}
+//5517,Hawkeye_2,Hawkeye,5,10,,1000,,0,,0,0x00000800,26,2,256,,0,1,0,{ bonus bDex,1; bonus bLongAtkRate,3; },{},{}
 
 // Shadow Chaser Paint And Brushes
 6120,Face_Paint,Face Paint,3,10,,10,,,,,,,,,,,,,{},{},{}
