@@ -1240,7 +1240,7 @@
 
 //===== Warlock ============================
 //-- WL_WHITEIMPRISON
-2201,0,0,10000,0,15000,0
+2201,0,0,4000,0,20000,5000
 //-- WL_SOULEXPANSION
 2202,3000,500,0,0,0,0
 //-- WL_FROSTMISTY
