@@ -440,6 +440,7 @@ void initChangeTables(void)
 	set_sc( AB_DUPLELIGHT        , SC_DUPLELIGHT      , SI_DUPLELIGHT      , SCB_NONE );
 	set_sc( AB_SECRAMENT         , SC_SECRAMENT       , SI_SECRAMENT       , SCB_NONE );
 
+	add_sc( WL_WHITEIMPRISON      , SC_WHITEIMPRISON );
 	set_sc( WL_RECOGNIZEDSPELL   , SC_RECOGNIZEDSPELL , SI_RECOGNIZEDSPELL , SCB_NONE );
 	set_sc( WL_FROSTMISTY        , SC_FREEZING        , SI_FROSTMISTY        , SCB_ASPD|SCB_SPEED|SCB_DEF|SCB_DEF2 );
 	set_sc( WL_MARSHOFABYSS      , SC_MARSHOFABYSS    , SI_MARSHOFABYSS    , SCB_SPEED|SCB_FLEE|SCB_DEF|SCB_DEF2 );
@@ -5073,6 +5074,9 @@ int status_get_sc_def(struct block_list *bl, enum sc_type type, int rate, int ti
 	case SC_OBLIVIONCURSE:
 		sc_def = status->int_ / 125; //FIXME: info said this is the formula of status chance. Check again pls. [Jobbie]
 		break;
+	case SC_WHITEIMPRISON:
+		sc_def = status_get_lv(bl)/5 + status->vit/4 + status->agi/10;
+		break;
 	case SC_ELECTRICSHOCKER:
 	case SC_BITE:
 		if( bl->type == BL_MOB ){
@@ -5463,6 +5467,8 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 			case SC_ROKISWEIL:
 			case SC_FOGWALL:
 			case SC_FREEZING:
+			case SC_BURNING:// Place here until we have info about its behavior on Boss-monsters. [pakpil]
+			case SC_MARSHOFABYSS:
 				return 0;
 		}
 	}
@@ -6955,6 +6961,7 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 		case SC__MANHOLE:
 		case SC_CHAOS:
 		case SC_CRYSTALIZE:
+		case SC_WHITEIMPRISON:
 			unit_stop_walking(bl,1);
 		break;
 		case SC_HIDING:
@@ -6982,6 +6989,7 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 		case SC_STUN:   sc->opt1 = OPT1_STUN;      break;
 		case SC_SLEEP:  sc->opt1 = OPT1_SLEEP;     break;
 		case SC_BURNING:  sc->opt1 = OPT1_BURNING;   break; // Burning need this to be showed correctly. [pakpil]
+		case SC_WHITEIMPRISON: sc->opt1 = OPT1_IMPRISON;  break;
 		//OPT2
 		case SC_POISON:       sc->opt2 |= OPT2_POISON;       break;
 		case SC_CURSE: case SC_OBLIVIONCURSE:        sc->opt2 |= OPT2_CURSE;        break;
@@ -7617,8 +7625,11 @@ int status_change_end(struct block_list* bl, enum sc_type type, int tid)
 			sc_start(bl,SC_HALLUCINATIONWALK_POSTDELAY,100,sce->val1,skill_get_time2(GC_HALLUCINATIONWALK,sce->val1));
 			break;
 		case SC_WHITEIMPRISON:
-			clif_damage(bl, bl, 0, 0, 0, sce->val1 * 400, 0, 0, 0);
-			status_zap(bl, sce->val1 * 400, 0);
+			if( sce->val3 == 0 )
+			{
+				clif_damage(bl, bl, 0, 0, 0, (bl->id==sce->val2)?2000:1200, 0, 0, 0);
+				status_zap(bl, (bl->id==sce->val2)?2000:1200, 0);
+			}
 			break;
 		case SC_WUGDASH:
 			{
@@ -7654,6 +7665,7 @@ int status_change_end(struct block_list* bl, enum sc_type type, int tid)
 	case SC_STUN:
 	case SC_SLEEP:
 	case SC_BURNING:
+	case SC_WHITEIMPRISON:
 		sc->opt1 = 0;
 		break;
 
